added navbar and nav img

--- a/templates/home.html
+++ b/templates/home.html
@@ -14,6 +14,7 @@
 </style> 
 </head>
 <body>
+  {% include 'navbar.html'%}
   <div class="container">
     <h1 class="text-center mt-2 mb-4">{{company_name}} Career</h1>
     <img class="img-fluid" id="banner" src="https://53e0af22-4178-40a8-a86b-c967706d043f-00-a0di16fk9m2w.pike.replit.dev/static/image.jpg" height="320">
