--- a/templates/home.html
+++ b/templates/home.html
@@ -28,7 +28,7 @@
     </div>
     <div class="text-center">
         <button class="btn btn-primary mt-2 mb-2">Contact Us</button>
-        <p>Copyright Reseverd @2024</p>
+        <p>@Copyright Reserved 2024 </p>
     </div>
   
     </div>
