--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -1,6 +1,7 @@
 <div class="border-bottom row" style="margin-bottom:16px; padding-bottom:8px;">
   <div class="col-10">
-      <h4        style="color:rgb(120,120,120);margin-bottom:4px; ">{{job['Postion']}}
+      <h4 style="color:rgb(120,120,120);margin-bottom:4px; ">
+        {{job['Postion']}}
       </h4>
       <div>Location:{{job['Location']}}</div>
   </div>
