added jobpage and gave route it

--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -6,6 +6,6 @@
       <div>Location:{{job['Location']}}</div>
   </div>
   <div class="col-2">
-    <button type="button" class="btn btn-outline-primary">Apply</button>
+    <a href="http://127.0.0.1:5000/job/{{job['id']}}" type="button" class="btn btn-outline-primary">Apply</a>
   </div>
 </div>
