--- a/templates/jobpage.html
+++ b/templates/jobpage.html
@@ -5,12 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Job Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+        #banner{
+          width:100%;
+          height: 360px;
+          object-fit: cover;
+        }
+      </style> 
 </head>
 <body>
-    <p>
-        <h3 style="color:rgb(11, 2, 2);margin-bottom:4px; ">{{job['Postion']}}</h3>
-        <h4>{{job['Location']}}</h4>
-    </p>
+    {% include 'navbar.html' %}
+    <div class="container">
+        <h1 class="text-center mt-2 mb-4">{{company_name}} Career</h1>
+        <img class="img-fluid" id="banner" src="static/image.jpg" height="320">
+        <p>
+            <h3 style="color:rgb(11, 2, 2);margin-bottom:4px; ">{{job['Postion']}}</h3>
+            <h4>{{job['Location']}}</h4>
+            <h4>Responsibilities</h4>
+            <h5>{{job['Responsibility']}}</h5>
+            <h5>Requirements</h5>
+            <h5>{{job['Requirements']}}</h5>
+        </p>
+    </div>
             
         
 </body>
